[metadata]
name = ulyxes
version = 0.0.1
author = Zoltan Siki
author_email = siki1958@gmail.com
description = API for surveyor's sensors
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv2
url = https://github.com/zsiki/ulyxes
project_urls =
    Bug Tracker = https://github.com/zsiki/ulyxes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv2
    Operating System :: OS Independent

[options]
#package_dir = {"ulyxes": "pyapi"}
packages = pyapi
scripts =
python_requires = >=3.4

[options.packages.find]
where = pyapi
