[metadata]
name = ulyxes
version = 0.0.1
author = Zoltan Siki
author_email = siki1958@gmail.com
description = API for surveyor's sensors
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv2
url = https://github.com/zsiki/ulyxes
project_urls =
    Bug Tracker = https://github.com/zsiki/ulyxes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv2
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
scripts =
    angle.py
    bluetoothiface.py
    bmp180measureunit.py
    bmp180.py
    confreader.py
    csvreader.py
    csvwriter.py
    dbreader.py
    dbwriter.py
    digitallevel.py
    echowriter.py
    filereader.py
    filewriter.py
    gamaiface.py
    georeader.py
    geowriter.py
    gnss.py
    graphplot.py
    httpreader.py
    httpwriter.py
    i2ciface.py
    iface.py
    imagereader.py
    imagewriter.py
    instrument.py
    jsonreader.py
    leicadnaunit.py
    leicameasureunit.py
    leicatca1800.py
    leicatcra1100.py
    leicatps1200.py
    localiface.py
    lsm9ds0.py
    lsm9ds0unit.py
    measureunit.py
    nmeagnssunit.py
    queuereader.py
    queuewriter.py
    reader.py
    serialiface.py
    sqlitereader.py
    sqlitewriter.py
    totalstation.py
    trimble5500.py
    videoiface.py
    videomeasureunit.py
    videowriter.py
    webcam.py
    webiface.py
    webmetmeasureunit.py
    webmet.py
    wificollector.py
    wifiunit.py
    writer.py
python_requires = >=3.4

[options.packages.find]
where = pyapi
